<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.component.CityDetailsActivity">

    <fragment
        android:id="@+id/map_fragment"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/info_item"
        app:layout_constraintHeight_percent="0.3"
        />
    <LinearLayout
        android:id="@+id/info_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/text_details_top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_fragment"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptions"
                android:textSize="@dimen/text_details_title_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/desc_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_details_margin_left"
                android:textSize="@dimen/text_details_value_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_details_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="@dimen/text_details_title_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/temp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_details_margin_left"
                android:textSize="@dimen/text_details_value_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_details_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_min_max"
                android:textSize="@dimen/text_details_title_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/temp_min_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_details_margin_left"
                android:textSize="@dimen/text_details_value_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_details_value_size">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/air_humidity"
                android:textSize="@dimen/text_details_title_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/air_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_details_margin_left"
                android:textSize="@dimen/text_details_value_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_details_top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="@dimen/text_details_title_size"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/wind_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_details_margin_left"
                android:textSize="@dimen/text_details_value_size"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/details_loading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_fragment">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

